<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleBtn"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleBtn"/>
    </RadioGroup>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/heightInput"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColorHint="#546E7A"/>

    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultDisplay"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintBounds" />

</LinearLayout>